feat: fix logic in debt payment flow
